Fixed the vertical alignment of flags in dialog titlebars.

--- a/vasl_templates/webapp/static/css/main.css
+++ b/vasl_templates/webapp/static/css/main.css
@@ -41,7 +41,7 @@ button.edit-template { height: 30px ; padding: 4px 10px ; }
 button.edit-template img { height: 18px ; vertical-align: middle ; margin-right: 0.25em ; }
 
 .ui-dialog-titlebar { padding: 0.2em 0.5em 0.2em 0.5em !important ; }
-.ui-dialog-titlebar img.flag { height: 0.9em ; margin-right: 0.25em ; }
+.ui-dialog-titlebar img.flag { height: 0.9em ; margin: -2px 0.25em 0 0 ; }
 .ui-dialog-titlebar-close { margin-top: -10px !important ; }
 .ui-dialog-content { padding: 0.5em !important ; }
 .ui-dialog-content p { margin-bottom: 0.5em ; }
